--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 }
        stage('Push-Image') {
            steps {
-               sh 'docker push himax85599/banking-project-demo:3.0'
+               sh 'docker push himax85599/banking-project-demo:3.0'                
                      }
                 }
        stage('Config & Deployment') {
@@ -44,7 +44,7 @@ pipeline {
                 
                 withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'AWS-ID', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
                     dir('terraform-files') {
-                    sh 'sudo chmod 600 mykey.pem'
+                    sh 'sudo chmod 600 kk.pem'
                     sh 'terraform init'
                     sh 'terraform validate'
                     sh 'terraform apply --auto-approve'
