--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -3,7 +3,7 @@ inventory = ./inventory
 deprecation_warning = False
 remote_user = ec2-user
 host_key_checking = False
-private_key_file = ./kk.pem
+private_key_file = ./KK.pem
 
 [privilage_esclation]
 become = true
