--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
             steps {
                 
                 withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'AWS-ID', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
-                    dir('terraform-files') {
+                    dir('terraform') {
                     sh 'sudo chmod 600 KK.pem'
                     sh 'terraform init'
                     sh 'terraform validate'
